force-app/main/default/objects/HSHListing__c/HSHListing__c.object-meta.xml
<CustomObject>
    <label>HSH Listing</label>
    <nameField>
        <label>HSH Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HSH Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>