force-app/main/default/objects/HSHListing__c/fields/AdsCost__c.field-meta.xml
<CustomField>
    <fullName>AdsCost__c</fullName>
    <label>Ads Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>