force-app/main/default/objects/HSHListing__c/fields/AppraisalNotes__c.field-meta.xml
<CustomField>
    <fullName>AppraisalNotes__c</fullName>
    <label>Appraisal Notes</label>
    <type>TextArea</type>
</CustomField>