force-app/main/default/objects/HSHListing__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>HSH Listings</relationshipLabel>
    <relationshipName>HSH_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>