force-app/main/default/objects/HSHListing__c/fields/CouncilRate__c.field-meta.xml
<CustomField>
    <fullName>CouncilRate__c</fullName>
    <label>Council Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>