force-app/main/default/objects/HSHListing__c/fields/Essitmiate_Price__c.field-meta.xml
<CustomField>
    <fullName>Essitmiate_Price__c</fullName>
    <label>Estimate Price</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>