force-app/main/default/objects/HSHListing__c/fields/Form10__c.field-meta.xml
<CustomField>
    <fullName>Form10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form 10</label>
    <type>Checkbox</type>
</CustomField>