force-app/main/default/objects/HSHListing__c/fields/Form6__c.field-meta.xml
<CustomField>
    <fullName>Form6__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form 6</label>
    <type>Checkbox</type>
</CustomField>