force-app/main/default/objects/HSHListing__c/fields/InitialDeposit__c.field-meta.xml
<CustomField>
    <fullName>InitialDeposit__c</fullName>
    <label>Initial Deposit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>