force-app/main/default/objects/HSHListing__c/fields/LeaseEndDate__c.field-meta.xml
<CustomField>
    <fullName>LeaseEndDate__c</fullName>
    <label>Lease End Date</label>
    <type>Date</type>
</CustomField>