force-app/main/default/objects/HSHListing__c/fields/ListingURL__c.field-meta.xml
<CustomField>
    <fullName>ListingURL__c</fullName>
    <label>Listing URL</label>
    <type>Url</type>
</CustomField>