force-app/main/default/objects/HSHListing__c/fields/ManagementFee__c.field-meta.xml
<CustomField>
    <fullName>ManagementFee__c</fullName>
    <label>Management Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>