force-app/main/default/objects/HSHListing__c/fields/PreparingNotes__c.field-meta.xml
<CustomField>
    <fullName>PreparingNotes__c</fullName>
    <label>Preparing Notes</label>
    <type>TextArea</type>
</CustomField>