force-app/main/default/objects/HSHListing__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HSH Listings</relationshipLabel>
    <relationshipName>HSH_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>