force-app/main/default/objects/HSHListing__c/fields/PropertyStatus__c.field-meta.xml
<CustomField>
    <fullName>PropertyStatus__c</fullName>
    <label>Property Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner Occupied</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
            <value>
                <fullName>Vacant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>