force-app/main/default/objects/HSHListing__c/fields/REA__c.field-meta.xml
<CustomField>
    <fullName>REA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>REA</label>
    <type>Checkbox</type>
</CustomField>