force-app/main/default/objects/HSHListing__c/fields/RentWeekly__c.field-meta.xml
<CustomField>
    <fullName>RentWeekly__c</fullName>
    <label>Rent(Weekly)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>