force-app/main/default/objects/HSHListing__c/fields/SellingNotes__c.field-meta.xml
<CustomField>
    <fullName>SellingNotes__c</fullName>
    <label>Selling Notes</label>
    <type>TextArea</type>
</CustomField>