force-app/main/default/objects/HSHListing__c/fields/SettlementNotes__c.field-meta.xml
<CustomField>
    <fullName>SettlementNotes__c</fullName>
    <label>Settlement Notes</label>
    <type>TextArea</type>
</CustomField>