force-app/main/default/objects/HSHListing__c/fields/SewerageFee__c.field-meta.xml
<CustomField>
    <fullName>SewerageFee__c</fullName>
    <label>Sewerage Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>