force-app/main/default/objects/HSHListing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Preparing</fullName>
            </value>
            <value>
                <fullName>Selling</fullName>
            </value>
            <value>
                <fullName>Under Offer</fullName>
            </value>
            <value>
                <fullName>Unconditional</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>