force-app/main/default/objects/HSHListing__c/fields/TenantName__c.field-meta.xml
<CustomField>
    <fullName>TenantName__c</fullName>
    <label>Tenant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>