force-app/main/default/objects/HSHListing__c/fields/TotalDepositConfirmed__c.field-meta.xml
<CustomField>
    <fullName>TotalDepositConfirmed__c</fullName>
    <label>Total Deposit Confirmed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>