force-app/main/default/objects/HSHListing__c/fields/UnconditionalDate__c.field-meta.xml
<CustomField>
    <fullName>UnconditionalDate__c</fullName>
    <label>Unconditional Date</label>
    <type>Date</type>
</CustomField>