force-app/main/default/objects/HSHListing__c/fields/UnconditionalNotes__c.field-meta.xml
<CustomField>
    <fullName>UnconditionalNotes__c</fullName>
    <label>Unconditional Notes</label>
    <type>TextArea</type>
</CustomField>