force-app/main/default/objects/HSHListing__c/fields/Underoffernotes__c.field-meta.xml
<CustomField>
    <fullName>Underoffernotes__c</fullName>
    <label>Under Offer Notes</label>
    <type>TextArea</type>
</CustomField>